try to fix reset button on mobile

--- a/css/forms.css
+++ b/css/forms.css
@@ -55,16 +55,16 @@ button {
     border: none;
     appearance: none;
     letter-spacing: var(--link-letter-spacing);
-    flex: 1 0 auto;
+    flex: 1 1;
     text-align: center;
 }
 button.button.secondary {
     background-color: var(--accent-color-play-d);
-    flex: 1 0 50%;
+    flex-grow: 2;
 }
-button.button.third {
-    flex: 1 0 16%;
-}
+/* button.button.third {
+    flex-shrink: 2;
+} */
 button:hover {
     background-color: var(--background-color-secondary);
     color: var(--accent-color);
